--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
-
+<p>This is actually the line added in another branch </p>
 </body>
 </html>
