--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>Hello world global</h1>
+<h1>Hello world global new branch</h1>
 <p> This line is added in master global things </p>
 <p>This is actually the line added in another branch </p>
 
