--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Hello world global</h1>
-<p> This line is added in master global things </p>
+<p> This line is added in master global things NENEW </p>
 <p>This is actually the line added in another branch </p>
 
 </body>
